# sub_comment_template

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
commentaries/: admin.py  models.py  serializers.py  urls.py  views.py
commentaries/tests/: test_api.py  test_serializers.py
comments/: settings.py  urls.py
static/css/: base.css
static/js/: base.js
templates/: comments.html
