[tool.poetry]
name = "comments"
version = "0.1.0"
description = "adding subcomments template"
authors = ["coveraver <sivolapenko.valeriy@gmail.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.7"
coverage = "5.3"
Django = "3.1.2"
djangorestframework = "3.12.1"
flake8 = "3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
